{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 34,
  "lineage": "73880eb2-d031-444e-3b88-b932691a4897",
  "resources": [
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05f991c49d264708f",
            "arn": "arn:aws:ec2:us-west-2:448049822603:instance/i-0ea761e6a01b2ae83",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea761e6a01b2ae83",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "aws_ec2_terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0979dbf7a8a34bcdf",
            "private_dns": "ip-11-0-1-202.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.202",
            "public_ip": "52.26.197.35",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b80c8584e4ea9df",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-031f9c18d86952218",
            "tags": {
              "Name": "jenkins:ubuntu linux Ec2"
            },
            "tags_all": {
              "Name": "jenkins:ubuntu linux Ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a0905dc729e0b15b",
              "sg-0b6c999d4e2013db0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.rest_api_public_subnet",
            "module.networking.aws_vpc.rest_api_vpc",
            "module.security_groups.aws_security_group.ec2_jenkins_ports_8080",
            "module.security_groups.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rest_api_internet_gate_way",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:448049822603:internet-gateway/igw-0d5cba3cd820cbe69",
            "id": "igw-0d5cba3cd820cbe69",
            "owner_id": "448049822603",
            "region": "us-west-2",
            "tags": {
              "Name": "rest_api_internet_gate_way"
            },
            "tags_all": {
              "Name": "rest_api_internet_gate_way"
            },
            "vpc_id": "vpc-0bfaba462491cd1e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.rest_api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rest_api_private_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:448049822603:route-table/rtb-0c9a67d923b1e2c8a",
            "id": "rtb-0c9a67d923b1e2c8a",
            "owner_id": "448049822603",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Name": "rest_api_route_table_private"
            },
            "tags_all": {
              "Name": "rest_api_route_table_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfaba462491cd1e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.rest_api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rest_api_public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:448049822603:route-table/rtb-03f26dd54eb54c016",
            "id": "rtb-03f26dd54eb54c016",
            "owner_id": "448049822603",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d5cba3cd820cbe69",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rest_api_route_table_public"
            },
            "tags_all": {
              "Name": "rest_api_route_table_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfaba462491cd1e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.rest_api_internet_gate_way",
            "module.networking.aws_vpc.rest_api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rest_api_private_subnet_route_table_assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fd622d656f3fb1f",
            "region": "us-west-2",
            "route_table_id": "rtb-0c9a67d923b1e2c8a",
            "subnet_id": "subnet-049ccdf63b3b0459a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.rest_api_private_subnet_route_table",
            "module.networking.aws_subnet.rest_api_private_subnet",
            "module.networking.aws_vpc.rest_api_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042278ab8a32b01bc",
            "region": "us-west-2",
            "route_table_id": "rtb-0c9a67d923b1e2c8a",
            "subnet_id": "subnet-041a6405e7cd59bef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.rest_api_private_subnet_route_table",
            "module.networking.aws_subnet.rest_api_private_subnet",
            "module.networking.aws_vpc.rest_api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rest_api_public_subnet_route_table_assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dd24268c2cd3931",
            "region": "us-west-2",
            "route_table_id": "rtb-03f26dd54eb54c016",
            "subnet_id": "subnet-031f9c18d86952218"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.rest_api_internet_gate_way",
            "module.networking.aws_route_table.rest_api_public_subnet_route_table",
            "module.networking.aws_subnet.rest_api_public_subnet",
            "module.networking.aws_vpc.rest_api_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d16b0d4c3c66169",
            "region": "us-west-2",
            "route_table_id": "rtb-03f26dd54eb54c016",
            "subnet_id": "subnet-058c8ca8aef31e1bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.rest_api_internet_gate_way",
            "module.networking.aws_route_table.rest_api_public_subnet_route_table",
            "module.networking.aws_subnet.rest_api_public_subnet",
            "module.networking.aws_vpc.rest_api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rest_api_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:448049822603:subnet/subnet-049ccdf63b3b0459a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049ccdf63b3b0459a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "448049822603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "rest_api_vpc-1"
            },
            "tags_all": {
              "Name": "rest_api_vpc-1"
            },
            "vpc_id": "vpc-0bfaba462491cd1e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.rest_api_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:448049822603:subnet/subnet-041a6405e7cd59bef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041a6405e7cd59bef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "448049822603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "rest_api_vpc-2"
            },
            "tags_all": {
              "Name": "rest_api_vpc-2"
            },
            "vpc_id": "vpc-0bfaba462491cd1e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.rest_api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rest_api_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:448049822603:subnet/subnet-031f9c18d86952218",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031f9c18d86952218",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "448049822603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "rest_api_vpc-1"
            },
            "tags_all": {
              "Name": "rest_api_vpc-1"
            },
            "vpc_id": "vpc-0bfaba462491cd1e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.rest_api_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:448049822603:subnet/subnet-058c8ca8aef31e1bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058c8ca8aef31e1bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "448049822603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "rest_api_vpc-2"
            },
            "tags_all": {
              "Name": "rest_api_vpc-2"
            },
            "vpc_id": "vpc-0bfaba462491cd1e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.rest_api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rest_api_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:448049822603:vpc/vpc-0bfaba462491cd1e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-084fa0e2e7a80f863",
            "default_route_table_id": "rtb-0e844c0a4919acf84",
            "default_security_group_id": "sg-0be975febf3baa330",
            "dhcp_options_id": "dopt-08eb748c168f33e74",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bfaba462491cd1e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e844c0a4919acf84",
            "owner_id": "448049822603",
            "region": "us-west-2",
            "tags": {
              "Name": "rest_api_vpc"
            },
            "tags_all": {
              "Name": "rest_api_vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_jenkins_ports_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:448049822603:security-group/sg-0b6c999d4e2013db0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b6c999d4e2013db0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing jenkins to the public ",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Allow port 8080 for jenkins",
            "name_prefix": "",
            "owner_id": "448049822603",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bfaba462491cd1e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.rest_api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:448049822603:security-group/sg-0a0905dc729e0b15b",
            "description": "enable the port 88 and ssh 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "sending traffic outside the world",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0905dc729e0b15b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Http from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Https from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow remote ssh to the Ec2",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG for EC2 to enable the ports ssh(22),HTTPS(443),HTTP(8080)",
            "name_prefix": "",
            "owner_id": "448049822603",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bfaba462491cd1e4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.rest_api_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}